# cardlens

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _patch2.py  _patch_main_window.py  build.ps1  crash_stdout.txt  pokemon_scanner.spec  pyproject.toml  requirements.txt
docs/: 00_scope.md  01_product_vision.md  02_architecture.md  03_recognition_pipeline.md  04_data_sources.md  05_storage_schema.md  06_ui_ux.md  07_logging_crash_and_ops.md  08_mvp.md  09_roadmap.md  10_ai_dev_rules.md  11_repo_structure.md  12_task_breakdown.md  13_risks_and_assumptions.md  14_phase_plan_to_first_usable_app.md  15_definition_of_done.md  16_patchnote_policy.md  17_first_usable_app_checklist.md
installer/: pokemon_scanner.iss  runtime_hook_easyocr.py
sample_inputs/: README.md
scripts/: bootstrap_env.ps1  bulk_import_2025.py  check_catalog.py  check_images.py  diag_crash.py  diag_full_scenario.py  diag_qthread.py  run_dev.py
src/pokemon_scanner/: app.py  main.py
src/pokemon_scanner/camera/: camera_service.py
src/pokemon_scanner/collection/: models.py  service.py
src/pokemon_scanner/config/: settings.py
src/pokemon_scanner/core/: crash_handler.py  logging_setup.py  name_translations.py  paths.py
src/pokemon_scanner/datasources/: base.py  ebay.py  name_translator.py  pokemontcg.py  price_aggregator.py
src/pokemon_scanner/db/: catalog_repository.py  database.py  repositories.py  schema.sql
src/pokemon_scanner/export/: exporters.py
src/pokemon_scanner/recognition/: matcher.py  models.py  ocr.py  pipeline.py  preprocess.py
src/pokemon_scanner/ui/: about_dialog.py  album_scan_dialog.py  album_widget.py  catalog_dialog.py  debug_dialog.py  image_cache.py  main_window.py  market_widget.py  onboarding_wizard.py  splash.py  stats_widget.py  styles.py  title_bar.py
tests/: test_database.py  test_paths.py  test_settings.py
